# rest-api-shared

./: Cargo.toml  LICENSE
src/: api_result_status.rs  configure_rest_api_server.rs  configure_rest_api_server_with_no_auth_middleware.rs  lib.rs
src/get_client_id/: get_client_id.rs
src/get_country_code/: get_country_code.rs  mod.rs
src/http_fields/: country_code_field.rs  email_field.rs  mod.rs  password_field.rs
src/middlewares/: auth_error_factory.rs  auth_failed.rs  auth_middleware.rs  get_session_token.rs  mod.rs  request_creds.rs  session_entity.rs
