[package]
name = "rest-api-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
auth-middleware = ["service-sdk/my-nosql-data-reader-sdk"]

[dependencies]
service-sdk = { tag = "0.2.6", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-nosql-sdk",
    "macros",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }


rust-common = { tag = "0.1.1", git = "https://github.com/MyJetTools/rust-common.git", features = [
    "country-code",
] }

serde = { version = "*", features = ["derive"] }
serde_repr = "*"
serde_json = "*"

async-trait = "*"
email_address = "*"
